<resources>
    <string name="app_name">Dev-intensive</string>
    <string name="profile_label_string_rating">Рейтинг</string>
    <string name="profile_label_string_respect">Уважение</string>
    <string name="profile_hint_repository">Репозиторий</string>
    <string name="profile_hint_about">О себе</string>
    <string name="profile_hint_last_name">Фамилия</string>
    <string name="profile_hint_first_name">Имя</string>
    <string name="menu_title_search">Поиск</string>
</resources>
